--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+backtrace = "0.3.67"
+clap = "4.1.4"
+is-terminal = "0.4.3"
+termcolor = "1.2.0"
+terminal_size = "0.2.3"
